@@ -2,6 +2,8 @@
 * Add missing convenience methods for getStats in Numeric and Alphanumeric script context points, third argument cache defaults false
 * Fixing debug logging in serial server input stream
 * Fix quantize data source poll and interval logging delays to avoid a currentTimeMillis() call
+* Add IP whitelist for virtual serial server sockets
+* Add debug log of incoming IPs on virtual serial server sockets
 
 *Version 3.5.4*
 * Bugfix: Convert dataPointTags, installedModules, and fileStores tables in database conversions
